k8s/hr-payroll-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-payroll-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: hr-payroll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8100
