k8s/hr-worker-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-worker-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: hr-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8200
